chore(executor): add arguments builder class